update csdl, add login, logout

--- a/webBanHang/webBanHang/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/webBanHang/webBanHang/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -364,10 +364,14 @@
                                     Activity Log
                                 </a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
-                                    <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Logout
-                                </a>
+                                <form method="post" action="@Url.Action("LogOut", "Login")">
+                                    <button type="submit" style="margin-left:30px; border:none">
+                                        
+                                            <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
+                                            Logout
+                                        
+                                    </button>
+                                </form>                             
                             </div>
                         </li>
 
