--- a/webBanHang/webBanHang/Areas/Admin/Views/Login/Index.cshtml
+++ b/webBanHang/webBanHang/Areas/Admin/Views/Login/Index.cshtml
@@ -47,7 +47,7 @@
                                         <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
                                     </div>
                                     <form method="post" action="@Url.Action("Index", "Login")">
-                                        
+                                        @Html.ValidationSummary(false, "",new { @class = "text-danger" })
                                         <div class="form-group">
                                             <input type="text" class="form-control form-control-user"
                                                   name="userName"
