--- a/webBanHang/webBanHang/Views/Shared/_Layout.cshtml
+++ b/webBanHang/webBanHang/Views/Shared/_Layout.cshtml
@@ -42,19 +42,19 @@
             <div class="header_Menu_root">
                 <ul class="header_List">
                     <li class="header_item">
-                       @Html.ActionLink("Trang chu", "TrangChu", "TrangChu");
+                       @Html.ActionLink("Trang chủ", "TrangChu", "TrangChu")
                     </li>
                     <li class="header_item">
-                        <a href="#!/gioiThieu">Giới thiệu</a>
+                        @Html.ActionLink("Giới thiệu", "TrangChu", "TrangChu")
                     </li>
                     <li class="header_item">
-                        <a href="#!/lienHe">Liên hệ</a>
+                        @Html.ActionLink("Liên hệ", "TrangChu", "TrangChu")
                     </li>
                     <li class="header_item">
-                        <a href="#!/sanPham">Sản phẩm</a>
+                        @Html.ActionLink("Sản phẩm", "TrangChu", "TrangChu")
                     </li>
                     <li class="header_item">
-                        <a href="#!/chiTiet">Chi tiết sản phẩm</a>
+                        @Html.ActionLink("Chi tiết sản phẩm", "TrangChu", "TrangChu")
                     </li>
                 </ul>
                 <div class="header_Time">
