--- a/webBanHang/webBanHang/Views/TrangChu/TrangChu.cshtml
+++ b/webBanHang/webBanHang/Views/TrangChu/TrangChu.cshtml
@@ -1,67 +1,108 @@
-﻿
+﻿@model IEnumerable<webBanHang.Models.Product>
+
+
+
 @{
     ViewBag.Title = "TrangChu";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
 <div class="container">
     <div class="content_HeaderImg">
-        <img src="~/wwwroot/images/anhBackGround.jpeg" width="1050px" height="600px" />
+        <img src="~/wwwroot/images/anhBackGround.jpeg" width="1050" height="600" />
     </div>
     <!-- list product -->
     <div class="content_products">
         <h2>SẢN PHẨM BÁN CHẠY</h2>
         <div class="content_list">
-            <div class="content_item">
-                <div class="content_img">
-                    <img src="~/wwwroot/images/RauCaiChip.jpeg" alt="Rau" />
+            @foreach (var item in Model)
+            {
+                
+                <div class="content_item">
+                    <div class="content_img">
+                        @{
+                            string ImagePath = "~/wwwroot/images/" + item.ProImage;
+                        }
+                        <img src="@Url.Content(ImagePath)" width="100" height="200" class="img-thumbnail" />
+                    </div>
+                    <div class="content_detail">
+                        <span class="category">@Html.DisplayFor(modelItem => item.Catalogy.CataName)</span><br />
+                        <span class="name">@Html.DisplayFor(modelItem => item.ProName)</span><br />
+                        <span class="price">@Html.DisplayFor(modelItem => item.Price)đ</span>
+                    </div>
                 </div>
-                <div class="content_detail">
-                    <span class="category">Rau hữu cơ</span><br />
-                    <span class="name">Rau cải chíp</span><br />
-                    <span class="price">đ 37.000</span>
-                </div>
-            </div>
-            <div class="content_item">
-                <div class="content_img">
-                    <img src="~/wwwroot/images/RauDen.jpeg" alt="Rau" />
-                </div>
-                <div class="content_detail">
-                    <span class="category">Rau hữu cơ</span><br />
-                    <span class="name">Rau dền</span><br />
-                    <span class="price">đ 35.000</span>
-                </div>
-            </div>
-            <div class="content_item">
-                <div class="content_img">
-                    <img src="~/wwwroot/images/ThitSuon.jpeg" alt="Rau" />
-                </div>
-                <div class="content_detail">
-                    <span class="category">Thịt cá hữu cơ</span><br />
-                    <span class="name">Thịt sườn</span><br />
-                    <span class="price">đ 275.000</span>
-                </div>
-            </div>
-            <div class="content_item">
-                <div class="content_img">
-                    <img src="~/wwwroot/images/tom.jpeg" alt="Rau" />
-                </div>
-                <div class="content_detail">
-                    <span class="category">Thịt cá hữu cơ</span><br />
-                    <span class="name">Tô rảo</span><br />
-                    <span class="price">đ 350.000</span>
-                </div>
-            </div>
-            <div class="content_item">
-                <div class="content_img">
-                    <img src="~/wwwroot/images/RauDen.jpeg" />
-                </div>
-                <div class="content_detail">
-                    <span class="category">Rau hữu cơ</span><br />
-                    <span class="name">Rau dền</span><br />
-                    <span class="price">đ 35.000</span>
-                </div>
-            </div>
+            }
+        </div>
+    </div>
+    <div class="content_products">
+        <h2>THỊT CÁ DÂN DÃ</h2>
+        <div class="content_list">
+            @foreach (var item in Model)
+            {
+                if (item.ID == "Loai1")
+                {
+                    <div class="content_item">
+                        <div class="content_img">
+                            @{
+                                string ImagePath = "~/wwwroot/images/" + item.ProImage;
+                            }
+                            <img src="@Url.Content(ImagePath)" width="100" height="200" class="img-thumbnail" />
+                        </div>
+                        <div class="content_detail">
+                            <span class="category">@Html.DisplayFor(modelItem => item.Catalogy.CataName)</span><br />
+                            <span class="name">@Html.DisplayFor(modelItem => item.ProName)</span><br />
+                            <span class="price">@Html.DisplayFor(modelItem => item.Price)đ</span>
+                        </div>
+                    </div>
+                }
+            }
+        </div>
+    </div>
+    <div class="content_products">
+        <h2>TRÁI CÂY</h2>
+        <div class="content_list">
+            @foreach (var item in Model)
+            {
+                if (item.ID == "Loai2")
+                {
+                    <div class="content_item">
+                        <div class="content_img">
+                            @{
+                                string ImagePath = "~/wwwroot/images/" + item.ProImage;
+                            }
+                            <img src="@Url.Content(ImagePath)" width="100" height="200" class="img-thumbnail" />
+                        </div>
+                        <div class="content_detail">
+                            <span class="category">@Html.DisplayFor(modelItem => item.Catalogy.CataName)</span><br />
+                            <span class="name">@Html.DisplayFor(modelItem => item.ProName)</span><br />
+                            <span class="price">@Html.DisplayFor(modelItem => item.Price)đ</span>
+                        </div>
+                    </div>
+                }
+            }
+        </div>
+    </div>
+    <div class="content_products">
+        <h2>RAU HỮU CƠ</h2>
+        <div class="content_list">
+            @foreach (var item in Model)
+            {
+                if (item.ID == "Loai3")
+                {
+                    <div class="content_item">
+                        <div class="content_img">
+                            @{
+                                string ImagePath = "~/wwwroot/images/" + item.ProImage;
+                            }
+                            <img src="@Url.Content(ImagePath)" width="100" height="200" class="img-thumbnail" />
+                        </div>
+                        <div class="content_detail">
+                            <span class="category">@Html.DisplayFor(modelItem => item.Catalogy.CataName)</span><br />
+                            <span class="name">@Html.DisplayFor(modelItem => item.ProName)</span><br />
+                            <span class="price">@Html.DisplayFor(modelItem => item.Price)đ</span>
+                        </div>
+                    </div>
+                }
+            }
         </div>
     </div>
     <!-- logo -->
@@ -99,5 +140,4 @@
         </div>
     </div>
 </div>
-
 
