--- a/webBanHang/webBanHang/Views/Shared/_Layout.cshtml
+++ b/webBanHang/webBanHang/Views/Shared/_Layout.cshtml
@@ -26,11 +26,8 @@
                         <input placeholder="Search..." />
                     </div>
                     <div class="header_LogIn">
-                        <a href="#!/dangNhap">
-                            <i class="fas fa-user-alt"></i>
-                        </a>
-                        <a href="#!/gioHang">
-                            <i class="fas fa-cart-plus"></i>
+                        <a href="/DangNhap/DangNhap">
+                            <i class="fas fa-user"></i>
                         </a>
                     </div>
                 </div>
