Gio hang + Dat hang

--- a/webBanHang/webBanHang/Views/Shared/_Layout.cshtml
+++ b/webBanHang/webBanHang/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                         <a href="/DangNhap/DangNhap">
                             <i class="fas fa-user"></i>
                         </a>
+                        <a href="/GioHang/GioHang">
+                            <i class="fas fa-cart-plus"></i>
+                        </a>
                     </div>
                 </div>
             </div>
