--- a/webBanHang/webBanHang/Views/TrangChu/TrangChu.cshtml
+++ b/webBanHang/webBanHang/Views/TrangChu/TrangChu.cshtml
@@ -6,6 +6,36 @@
     ViewBag.Title = "TrangChu";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+
+<style>
+    .content_img {
+        position: relative;
+    }
+
+        .content_img a {
+            position: absolute;
+            top: 0%;
+            left: 30%;
+            transform: translate(0%, 0%);
+            opacity: 0;
+            font-size: 25px;
+            color: blue;
+            background-color: floralwhite;
+            border: none;
+            height: 30px;
+        }
+
+    .content_item:hover a {
+        transform: translate(0%, 350%);
+        opacity: 1;
+        transition: 1s;
+    }
+</style>
+
+
+
+
 <div class="container">
     <div class="content_HeaderImg">
         <img src="~/wwwroot/images/anhBackGround.jpeg" width="1050" height="600" />
@@ -16,13 +46,16 @@
         <div class="content_list">
             @foreach (var item in Model)
             {
-                
+
                 <div class="content_item">
                     <div class="content_img">
                         @{
                             string ImagePath = "~/wwwroot/images/" + item.ProImage;
                         }
                         <img src="@Url.Content(ImagePath)" width="100" height="200" class="img-thumbnail" />
+                        <a href="@Url.Action("ThemGioHang", "Giohang", new { @class="addCart", @sMaSP = item.ProID, @strURL = Request.Url.ToString() })">
+                            Đặt mua
+                        </a>
                     </div>
                     <div class="content_detail">
                         <span class="category">@Html.DisplayFor(modelItem => item.Catalogy.CataName)</span><br />
@@ -46,6 +79,9 @@
                                 string ImagePath = "~/wwwroot/images/" + item.ProImage;
                             }
                             <img src="@Url.Content(ImagePath)" width="100" height="200" class="img-thumbnail" />
+                            <a href="@Url.Action("ThemGioHang", "Giohang", new { @class="addCart", @sMaSP = item.ProID, @strURL = Request.Url.ToString() })">
+                                Đặt mua
+                            </a>
                         </div>
                         <div class="content_detail">
                             <span class="category">@Html.DisplayFor(modelItem => item.Catalogy.CataName)</span><br />
@@ -70,6 +106,9 @@
                                 string ImagePath = "~/wwwroot/images/" + item.ProImage;
                             }
                             <img src="@Url.Content(ImagePath)" width="100" height="200" class="img-thumbnail" />
+                            <a href="@Url.Action("ThemGioHang", "Giohang", new { @class="addCart", @sMaSP = item.ProID, @strURL = Request.Url.ToString() })">
+                                Đặt mua
+                            </a>
                         </div>
                         <div class="content_detail">
                             <span class="category">@Html.DisplayFor(modelItem => item.Catalogy.CataName)</span><br />
@@ -94,6 +133,9 @@
                                 string ImagePath = "~/wwwroot/images/" + item.ProImage;
                             }
                             <img src="@Url.Content(ImagePath)" width="100" height="200" class="img-thumbnail" />
+                            <a href="@Url.Action("ThemGioHang", "Giohang", new { @class="addCart", @sMaSP = item.ProID, @strURL = Request.Url.ToString() })">
+                                Đặt mua
+                            </a>
                         </div>
                         <div class="content_detail">
                             <span class="category">@Html.DisplayFor(modelItem => item.Catalogy.CataName)</span><br />
