chỉnh lại một chút bên admin

--- a/webBanHang/webBanHang/Areas/Admin/Views/Catalogies/Delete.cshtml
+++ b/webBanHang/webBanHang/Areas/Admin/Views/Catalogies/Delete.cshtml
@@ -5,15 +5,14 @@
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Delete</h2>
+<h2>Xóa danh mục</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h4>Bạn có chắc chắn muốn xóa danh mục này?</h4>
 <div>
-    <h4>Catalogy</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.CataName)
+            Tên danh mục
         </dt>
 
         <dd>
@@ -27,8 +26,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Xóa" class="btn btn-default" /> |
+            @Html.ActionLink("Quay lại", "Index")
         </div>
     }
 </div>
