--- a/webBanHang/webBanHang/Areas/Admin/Views/Catalogies/Details.cshtml
+++ b/webBanHang/webBanHang/Areas/Admin/Views/Catalogies/Details.cshtml
@@ -5,14 +5,13 @@
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
+<h2>Chi tiết danh mục</h2>
 
 <div>
-    <h4>Catalogy</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt style="color:black">
-            @Html.DisplayNameFor(model => model.CataName)
+            Tên danh mục
         </dt>
 
         <dd style="color:black">
@@ -22,6 +21,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Chỉnh sửa", "Edit", new { id = Model.ID }) |
+    @Html.ActionLink("Quay lại", "Index")
 </p>
