--- a/webBanHang/webBanHang/Areas/Admin/Views/HoaDons/Details.cshtml
+++ b/webBanHang/webBanHang/Areas/Admin/Views/HoaDons/Details.cshtml
@@ -70,5 +70,5 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.MaHD }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Quay lại", "Index")
 </p>
