--- a/webBanHang/webBanHang/Areas/Admin/Views/KhuyenMais/Details.cshtml
+++ b/webBanHang/webBanHang/Areas/Admin/Views/KhuyenMais/Details.cshtml
@@ -30,5 +30,5 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.MaKhuyenMai }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Quay lại", "Index")
 </p>
