--- a/webBanHang/webBanHang/Areas/Admin/Views/Products/Details.cshtml
+++ b/webBanHang/webBanHang/Areas/Admin/Views/Products/Details.cshtml
@@ -5,10 +5,9 @@
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
+<h2>Chi tiết sản phẩm</h2>
 
 <div>
-    <h4>Product</h4>
     <hr />
     <dl class="dl-horizontal" style="color:black">
         <dt>
@@ -75,6 +74,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ProID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Chỉnh sửa", "Edit", new { id = Model.ProID }) |
+    @Html.ActionLink("Quay lại", "Index")
 </p>
