--- a/webBanHang/webBanHang/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/webBanHang/webBanHang/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -71,7 +71,7 @@
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Select Components:</h6>
                        
-                        @Html.ActionLink("Customer", "Index", "Customers", null, new { area = "Admin", @class = "collapse-item" })
+                        @Html.ActionLink("Khách hàng", "Index", "Customers", null, new { area = "Admin", @class = "collapse-item" })
                     </div>
                 </div>
             </li>
@@ -94,8 +94,8 @@
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Select components:</h6>
-                        @Html.ActionLink("Catalogy", "Index", "Catalogies", null, new { area = "Admin", @class = "collapse-item" })
-                        @Html.ActionLink("Product", "Index", "Products", null, new { area = "Admin", @class = "collapse-item" })
+                        @Html.ActionLink("Danh mục sản phẩm", "Index", "Catalogies", null, new { area = "Admin", @class = "collapse-item" })
+                        @Html.ActionLink("Sản phẩm", "Index", "Products", null, new { area = "Admin", @class = "collapse-item" })
                         @Html.ActionLink("Khuyến mại", "Index", "KhuyenMais", null, new { area = "Admin", @class = "collapse-item" })
                     </div>
                 </div>
@@ -116,7 +116,6 @@
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Select components:</h6>
                         @Html.ActionLink("Hóa đơn", "Index", "HoaDons", null, new { area = "Admin", @class = "collapse-item" })
-                        @Html.ActionLink("Chi tiết HD", "Index", "ChiTietHoaDons", null, new { area = "Admin", @class = "collapse-item" })
                     </div>
                 </div>
             </li>
@@ -368,7 +367,7 @@
             <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
-                        <span>Copyright &copy; Your Website 2021</span>
+                        <span>Copyright &copy; Nhóm 12 - Đại học Công nghiệp Hà Nội</span>
                     </div>
                 </div>
             </footer>
