--- a/webBanHang/webBanHang/Areas/Admin/Views/Catalogies/Edit.cshtml
+++ b/webBanHang/webBanHang/Areas/Admin/Views/Catalogies/Edit.cshtml
@@ -5,20 +5,19 @@
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Edit</h2>
+<h2>Sửa danh mục</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Catalogy</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.ID)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.CataName, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.CataName, "Tên danh mục", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10" style="color:black">
                 @Html.EditorFor(model => model.CataName, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.CataName, "", new { @class = "text-danger" })
@@ -27,14 +26,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Lưu" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Quay lại", "Index")
 </div>
 @if (ViewBag.Error != null)
 {
