--- a/webBanHang/webBanHang/Areas/Admin/Views/ChiTietHoaDons/Details.cshtml
+++ b/webBanHang/webBanHang/Areas/Admin/Views/ChiTietHoaDons/Details.cshtml
@@ -47,5 +47,5 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Quay lại", "Index")
 </p>
