--- a/webBanHang/webBanHang/Areas/Admin/Views/Customers/Details.cshtml
+++ b/webBanHang/webBanHang/Areas/Admin/Views/Customers/Details.cshtml
@@ -71,5 +71,5 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Phone }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Quay lại", "Index")
 </p>
