--- a/webBanHang/webBanHang/Areas/Admin/Views/Customers/Index.cshtml
+++ b/webBanHang/webBanHang/Areas/Admin/Views/Customers/Index.cshtml
@@ -15,8 +15,8 @@
 @using (Html.BeginForm())
 {
     <p>
-        Tìm user theo tên: @Html.TextBox("searchString", ViewBag.CurrentFilter as string)
-        <input type="submit" value="Tìm kiêm" />
+        Tìm khách hàng theo tên: @Html.TextBox("searchString", ViewBag.CurrentFilter as string)
+        <input type="submit" value="Tìm kiếm" />
     </p>
 }
 <table class="table">
