--- a/webBanHang/webBanHang/Areas/Admin/Views/Products/Delete.cshtml
+++ b/webBanHang/webBanHang/Areas/Admin/Views/Products/Delete.cshtml
@@ -5,11 +5,10 @@
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Delete</h2>
+<h2>Xóa</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h4 class="alert alert-danger">Bạn có chắc chắn muốn xóa sản phẩm này?</h4>
 <div>
-    <h4>Product</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt style="color:red">
@@ -75,8 +74,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Xóa" class="btn btn-default" /> |
+            @Html.ActionLink("Quay lại", "Index")
         </div>
     }
     @if (ViewBag.Error != null)
