--- a/webBanHang/webBanHang/Areas/Admin/Views/Products/Edit.cshtml
+++ b/webBanHang/webBanHang/Areas/Admin/Views/Products/Edit.cshtml
@@ -3,16 +3,17 @@
 @{
     ViewBag.Title = "Edit";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
+    var imagePath = $"~/wwwroot/images/{Model.ProImage}";
 }
 
-<h2>Edit</h2>
+<h2>Sửa</h2>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit", "Products", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal" style="color:black">
-        <h4>Product</h4>
+        <h4>Sản phẩm</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.ProID)
@@ -52,8 +53,11 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ProImage, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ProImage, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ProImage, "", new { @class = "text-danger" })
+                <img id="output" class="img-thumbnail" alt="anh" width="180" height="200" src="@Url.Content(imagePath)" />
+                <p>
+                    <label for="ufile" style="cursor:pointer">Chọn file ảnh</label>
+                </p>
+                <input name="ImageFile" id="ufile" type="file" style="display:none" onchange="loadFile(event)" />
             </div>
         </div>
 
@@ -68,14 +72,14 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ProDescription, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ProDescription, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.ProDescription, new { htmlAttributes = new { @class = "form-control", @type = "text" } })
                 @Html.ValidationMessageFor(model => model.ProDescription, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Lưu" class="btn btn-default" />
             </div>
         </div>
     </div>
@@ -87,5 +91,12 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Quay lại", "Index")
 </div>
+
+<script>
+    var loadFile = function (event) {
+        var image = document.getElementById('output');
+        image.src = URL.createObjectURL(event.target.files[0]);
+    }
+</script>
