Top 3 san pham ban chay, chinh lai admin

--- a/webBanHang/webBanHang/Areas/Admin/Views/Customers/Details.cshtml
+++ b/webBanHang/webBanHang/Areas/Admin/Views/Customers/Details.cshtml
@@ -16,11 +16,11 @@
 <h2>Chi tiết</h2>
 
 <div>
-    <h4>Customer</h4>
+    <h4>KHÁCH HÀNG</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Username)
+           Tên Đăng Nhập
         </dt>
 
         <dd>
@@ -28,7 +28,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.PassWord)
+           Mật Khẩu
         </dt>
 
         <dd>
@@ -36,7 +36,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Email)
+           Email
         </dt>
 
         <dd>
@@ -44,7 +44,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Phone)
+           Điện Thoại
         </dt>
 
         <dd>
@@ -52,7 +52,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Address)
+           Địa Chỉ
         </dt>
 
         <dd>
@@ -60,7 +60,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.RoleID)
+           Loại Tài Khoản
         </dt>
 
         <dd>
