--- a/webBanHang/webBanHang/Areas/Admin/Views/Customers/Index.cshtml
+++ b/webBanHang/webBanHang/Areas/Admin/Views/Customers/Index.cshtml
@@ -22,22 +22,22 @@
 <table class="table">
     <tr style="color:red">
         <th>
-            @Html.ActionLink("UserName", "Index", new { sortOrder = ViewBag.SapTheoTen, currentFilter = ViewBag.CurrentFilter })
+            @Html.ActionLink("Tên Đăng Nhập", "Index", new { sortOrder = ViewBag.SapTheoTen, currentFilter = ViewBag.CurrentFilter })
         </th>
         <th>
-            Password
+            Mật Khẩu
         </th>
         <th>
             Email
         </th>
         <th>
-            Phone
+            Điện thoại
         </th>
         <th>
-            Address
+            Địa chỉ
         </th>
         <th>
-            RoleID
+            Loại Tài khoản
         </th>
         <th></th>
     </tr>
