--- a/webBanHang/webBanHang/Areas/Admin/Views/KhuyenMais/Details.cshtml
+++ b/webBanHang/webBanHang/Areas/Admin/Views/KhuyenMais/Details.cshtml
@@ -8,18 +8,18 @@
 <h2>Chi tiết</h2>
 
 <div>
-    <h4>KhuyenMai</h4>
+    <h4>KHUYẾN MẠI</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt style="color:red">
-            @Html.DisplayNameFor(model => model.MaKhuyenMai)
+            Mã Khuyến Mại
         </dt>
 
         <dd style="color:black">
             @Html.DisplayFor(model => model.MaKhuyenMai)
         </dd>
         <dt style="color:red">
-            @Html.DisplayNameFor(model => model.GiaTri)
+           Giá Trị
         </dt>
 
         <dd style="color:black">
