--- a/webBanHang/webBanHang/Areas/Admin/Views/Products/Details.cshtml
+++ b/webBanHang/webBanHang/Areas/Admin/Views/Products/Details.cshtml
@@ -6,12 +6,19 @@
 }
 
 <h2>Chi tiết sản phẩm</h2>
-
+<style>
+    dt{
+        color:red
+    }
+    dd{
+        color:black
+    }
+</style>
 <div>
     <hr />
     <dl class="dl-horizontal" style="color:black">
         <dt>
-            @Html.DisplayNameFor(model => model.Catalogy.CataName)
+           Loại SP
         </dt>
 
         <dd>
@@ -19,7 +26,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.ProName)
+           Tên SP
         </dt>
 
         <dd>
@@ -27,7 +34,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Quantity)
+           Số Lượng
         </dt>
 
         <dd>
@@ -35,7 +42,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Price)
+            Giá Bán
         </dt>
 
         <dd>
@@ -43,7 +50,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.ProImage)
+          Hình Ảnh
         </dt>
 
         <dd>
@@ -56,7 +63,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.DateOfImport)
+            Ngày Nhập
         </dt>
 
         <dd>
@@ -64,7 +71,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.ProDescription)
+            Mô Tả
         </dt>
 
         <dd>
