--- a/webBanHang/webBanHang/Areas/Admin/Views/Products/Index.cshtml
+++ b/webBanHang/webBanHang/Areas/Admin/Views/Products/Index.cshtml
@@ -21,7 +21,7 @@
 <table class="table">
     <tr style="color:red">
         <th>
-            @Html.ActionLink("ID SP", "Index", new {sortOrder = ViewBag.SapTheoID})
+            @Html.ActionLink("Mã SP", "Index", new {sortOrder = ViewBag.SapTheoID})
         </th>
         <th>
             @Html.ActionLink("Loại SP", "Index", new { sortOrder = ViewBag.SapTheoLoaiSP })
