--- a/webBanHang/webBanHang/Areas/Admin/Views/Customers/Delete.cshtml
+++ b/webBanHang/webBanHang/Areas/Admin/Views/Customers/Delete.cshtml
@@ -4,16 +4,23 @@
     ViewBag.Title = "Delete";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
-
+<style>
+    dt{
+        color:red
+    }
+    dd{
+        color:black
+    }
+</style>
 <h2>Xóa</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3 class="alert alert-danger">Bạn có chắc chắn muốn xóa khách hàng này?</h3>
 <div>
-    <h4>Customer</h4>
+    <h4>KHÁCH HÀNG</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Username)
+            Tên Đăng Nhập
         </dt>
 
         <dd>
@@ -21,7 +28,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.PassWord)
+            Mật Khẩu
         </dt>
 
         <dd>
@@ -29,7 +36,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Email)
+           Email
         </dt>
 
         <dd>
@@ -37,7 +44,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Address)
+            Địa chỉ
         </dt>
 
         <dd>
@@ -45,7 +52,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.RoleID)
+            Loại Tài Khoản
         </dt>
 
         <dd>
