--- a/webBanHang/webBanHang/Areas/Admin/Views/Customers/Edit.cshtml
+++ b/webBanHang/webBanHang/Areas/Admin/Views/Customers/Edit.cshtml
@@ -12,13 +12,14 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Customer</h4>
+        <h4>KHÁCH HÀNG</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Phone)
 
         <div class="form-group" style="color:red">
-            @Html.LabelFor(model => model.Username, htmlAttributes: new { @class = "control-label col-md-2" })
+            @*@Html.LabelFor(model => model.Username, htmlAttributes: new { @class = "control-label col-md-2" })*@
+            Tên đăng nhập
             <div class="col-md-10" style="color:black">
                 @Html.EditorFor(model => model.Username, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Username, "", new { @class = "text-danger" })
@@ -26,7 +27,8 @@
         </div>
 
         <div class="form-group" style="color:red">
-            @Html.LabelFor(model => model.PassWord, htmlAttributes: new { @class = "control-label col-md-2" })
+            @*@Html.LabelFor(model => model.PassWord, htmlAttributes: new { @class = "control-label col-md-2" })*@
+            Mật Khẩu
             <div class="col-md-10">
                 @Html.EditorFor(model => model.PassWord, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.PassWord, "", new { @class = "text-danger" })
@@ -34,7 +36,8 @@
         </div>
 
         <div class="form-group" style="color:red">
-            @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
+            @*@Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })*@
+            Email
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
@@ -42,7 +45,8 @@
         </div>
 
         <div class="form-group" style="color:red">
-            @Html.LabelFor(model => model.Address, htmlAttributes: new { @class = "control-label col-md-2" })
+            @*@Html.LabelFor(model => model.Address, htmlAttributes: new { @class = "control-label col-md-2" })*@
+            Địa chỉ
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Address, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
@@ -50,7 +54,8 @@
         </div>
 
         <div class="form-group" style="color:red">
-            @Html.LabelFor(model => model.RoleID, htmlAttributes: new { @class = "control-label col-md-2" })
+            @*@Html.LabelFor(model => model.RoleID, htmlAttributes: new { @class = "control-label col-md-2" })*@
+            Loại Tài Khoản
             <div class="col-md-10">
                 @Html.EditorFor(model => model.RoleID, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.RoleID, "", new { @class = "text-danger" })
