--- a/webBanHang/webBanHang/Areas/Admin/Views/HoaDons/Create.cshtml
+++ b/webBanHang/webBanHang/Areas/Admin/Views/HoaDons/Create.cshtml
@@ -16,7 +16,7 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group" style="color:red">
-            @Html.LabelFor(model => model.Phone, "UserName", htmlAttributes: new { @class = "control-label col-md-2" })
+           Tên Khách Hàng
             <div class="col-md-10" style="color:black">
                 @Html.DropDownList("Phone", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Phone, "", new { @class = "text-danger" })
@@ -24,7 +24,7 @@
         </div>
 
         <div class="form-group" style="color:red">
-            @Html.LabelFor(model => model.ngayDayHang, htmlAttributes: new { @class = "control-label col-md-2" })
+           Ngày Đặt Hàng
             <div class="col-md-10" style="color:black">
                 @Html.EditorFor(model => model.ngayDayHang, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ngayDayHang, "", new { @class = "text-danger" })
@@ -32,7 +32,7 @@
         </div>
 
         <div class="form-group" style="color:red">
-            @Html.LabelFor(model => model.MaKhuyenMai, "MaKhuyenMai", htmlAttributes: new { @class = "control-label col-md-2" })
+            Khuyến Mại
             <div class="col-md-10" style="color:black">
                 @Html.DropDownList("MaKhuyenMai", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.MaKhuyenMai, "", new { @class = "text-danger" })
@@ -40,7 +40,7 @@
         </div>
 
         <div class="form-group" style="color:red">
-            @Html.LabelFor(model => model.NoiNhanHang, htmlAttributes: new { @class = "control-label col-md-2" })
+           Nơi Nhận Hàng
             <div class="col-md-10" style="color:black">
                 @Html.EditorFor(model => model.NoiNhanHang, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.NoiNhanHang, "", new { @class = "text-danger" })
@@ -48,7 +48,7 @@
         </div>
 
         <div class="form-group" style="color:red">
-            @Html.LabelFor(model => model.ThanhToan, htmlAttributes: new { @class = "control-label col-md-2" })
+           Tình Trạng Thanh Toán
             <div class="col-md-10">
                 <div class="checkbox" style="color:black">
                     @Html.EditorFor(model => model.ThanhToan)
@@ -58,7 +58,7 @@
         </div>
 
         <div class="form-group" style="color:red">
-            @Html.LabelFor(model => model.GiaoHang, htmlAttributes: new { @class = "control-label col-md-2" })
+          Tình Trạng Giao Hàng
             <div class="col-md-10">
                 <div class="checkbox" style="color:black">
                     @Html.EditorFor(model => model.GiaoHang)
