--- a/webBanHang/webBanHang/Areas/Admin/Views/HoaDons/Delete.cshtml
+++ b/webBanHang/webBanHang/Areas/Admin/Views/HoaDons/Delete.cshtml
@@ -4,16 +4,21 @@
     ViewBag.Title = "Delete";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
-
+<style>
+    dt{color:red}
+    dd{
+        color:black
+    }
+</style>
 <h2>Xóa</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Bạn có chắc chắn muốn xóa hóa đơn này?</h3>
 <div>
-    <h4>HoaDon</h4>
+    <h4>HÓA ĐƠN</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Customer.Username)
+            Tên Khách Hàng
         </dt>
 
         <dd>
@@ -21,7 +26,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.KhuyenMai.MaKhuyenMai)
+           Khuyến Mại
         </dt>
 
         <dd>
@@ -29,7 +34,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.ngayDayHang)
+           Ngày Đặt Hàng
         </dt>
 
         <dd>
@@ -37,7 +42,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.NoiNhanHang)
+            Nơi Nhận Hàng
         </dt>
 
         <dd>
@@ -45,7 +50,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.ThanhToan)
+            Tình Trạng Thanh Toán
         </dt>
 
         <dd>
@@ -53,7 +58,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.GiaoHang)
+           Tình Trạng Giao Hàng
         </dt>
 
         <dd>
