--- a/webBanHang/webBanHang/Areas/Admin/Views/HoaDons/Edit.cshtml
+++ b/webBanHang/webBanHang/Areas/Admin/Views/HoaDons/Edit.cshtml
@@ -12,13 +12,13 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>HoaDon</h4>
+        <h4>HÓA ĐƠN</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.MaHD)
 
         <div class="form-group" style="color:red">
-            @Html.LabelFor(model => model.Customer.Username, "UserName", htmlAttributes: new { @class = "control-label col-md-2" })
+           Tên Khách Hàng
             <div class="col-md-10" style="color:black">
                 @Html.DropDownList("Phone", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Phone, "", new { @class = "text-danger" })
@@ -26,7 +26,7 @@
         </div>
 
         <div class="form-group" style="color:red">
-            @Html.LabelFor(model => model.ngayDayHang, htmlAttributes: new { @class = "control-label col-md-2" })
+           Ngày Đặt Hàng
             <div class="col-md-10" style="color:black">
                 @Html.EditorFor(model => model.ngayDayHang, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ngayDayHang, "", new { @class = "text-danger" })
@@ -34,7 +34,7 @@
         </div>
 
         <div class="form-group" style="color:red">
-            @Html.LabelFor(model => model.MaKhuyenMai, "MaKhuyenMai", htmlAttributes: new { @class = "control-label col-md-2" })
+           Khuyến Mại
             <div class="col-md-10" style="color:black">
                 @Html.DropDownList("MaKhuyenMai", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.MaKhuyenMai, "", new { @class = "text-danger" })
@@ -42,7 +42,7 @@
         </div>
 
         <div class="form-group" style="color:red">
-            @Html.LabelFor(model => model.NoiNhanHang, htmlAttributes: new { @class = "control-label col-md-2" })
+           Nơi Nhận Hàng
             <div class="col-md-10" style="color:black">
                 @Html.EditorFor(model => model.NoiNhanHang, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.NoiNhanHang, "", new { @class = "text-danger" })
@@ -50,7 +50,7 @@
         </div>
 
         <div class="form-group" style="color:red">
-            @Html.LabelFor(model => model.ThanhToan, htmlAttributes: new { @class = "control-label col-md-2" })
+          Tình Trạng Thanh Toán
             <div class="col-md-10">
                 <div class="checkbox" style="color:black">
                     @Html.EditorFor(model => model.ThanhToan)
@@ -60,7 +60,7 @@
         </div>
 
         <div class="form-group" style="color:red">
-            @Html.LabelFor(model => model.GiaoHang, htmlAttributes: new { @class = "control-label col-md-2" })
+            Tình Trạng Giao Hàng
             <div class="col-md-10">
                 <div class="checkbox" style="color:black">
                     @Html.EditorFor(model => model.GiaoHang)
