--- a/webBanHang/webBanHang/Areas/Admin/Views/KhuyenMais/Delete.cshtml
+++ b/webBanHang/webBanHang/Areas/Admin/Views/KhuyenMais/Delete.cshtml
@@ -7,16 +7,16 @@
 
 <h2>Xóa</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Bạn có chắc chắn xóa khuyến mại này?</h3>
 <div>
-    <h4>KhuyenMai</h4>
+    <h4>KHUYẾN MẠI</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.GiaTri)
+        <dt style="color:red">
+           Giá Trị
         </dt>
 
-        <dd>
+        <dd style="color:black">
             @Html.DisplayFor(model => model.GiaTri)
         </dd>
 
