--- a/webBanHang/webBanHang/Areas/Admin/Views/KhuyenMais/Edit.cshtml
+++ b/webBanHang/webBanHang/Areas/Admin/Views/KhuyenMais/Edit.cshtml
@@ -12,13 +12,13 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>KhuyenMai</h4>
+        <h4>KHUYẾN MẠI</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.MaKhuyenMai)
 
         <div class="form-group" style="color:red">
-            @Html.LabelFor(model => model.GiaTri, htmlAttributes: new { @class = "control-label col-md-2" })
+          Giá Trị Khuyến Mại
             <div class="col-md-10">
                 @Html.EditorFor(model => model.GiaTri, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.GiaTri, "", new { @class = "text-danger" })
