--- a/webBanHang/webBanHang/Areas/Admin/Views/Products/Delete.cshtml
+++ b/webBanHang/webBanHang/Areas/Admin/Views/Products/Delete.cshtml
@@ -12,7 +12,7 @@
     <hr />
     <dl class="dl-horizontal">
         <dt style="color:red">
-            @Html.DisplayNameFor(model => model.Catalogy.CataName)
+           Loại SP
         </dt>
 
         <dd>
@@ -20,7 +20,7 @@
         </dd>
 
         <dt style="color:red">
-            @Html.DisplayNameFor(model => model.ProName)
+           Tên SP
         </dt>
 
         <dd>
@@ -28,7 +28,7 @@
         </dd>
 
         <dt  style="color:red">
-            @Html.DisplayNameFor(model => model.Quantity)
+           Số Lượng
         </dt>
 
         <dd>
@@ -36,7 +36,7 @@
         </dd>
 
         <dt style="color:red">
-            @Html.DisplayNameFor(model => model.Price)
+           Giá Bán
         </dt>
 
         <dd>
@@ -44,7 +44,7 @@
         </dd>
 
         <dt style="color:red">
-            @Html.DisplayNameFor(model => model.ProImage)
+           Hình Ảnh
         </dt>
 
         <dd>
@@ -52,7 +52,7 @@
         </dd>
 
         <dt style="color:red">
-            @Html.DisplayNameFor(model => model.DateOfImport)
+           Ngày Nhập
         </dt>
 
         <dd>
@@ -60,7 +60,7 @@
         </dd>
 
         <dt style="color:red">
-            @Html.DisplayNameFor(model => model.ProDescription)
+           Mô Tả
         </dt>
 
         <dd>
