--- a/webBanHang/webBanHang/Areas/Admin/Views/Products/Edit.cshtml
+++ b/webBanHang/webBanHang/Areas/Admin/Views/Products/Edit.cshtml
@@ -18,40 +18,40 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.ProID)
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.ID, "ID", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="form-group" style="color:red">
+           Loại SP
             <div class="col-md-10">
                 @Html.DropDownList("ID", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ID, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.ProName, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="form-group" style="color:red">
+           Tên SP
             <div class="col-md-10">
                 @Html.EditorFor(model => model.ProName, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ProName, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Quantity, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="form-group" style="color:red">
+            Số Lượng
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Quantity, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Quantity, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Price, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="form-group" style="color:red">
+           Giá Bán
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.ProImage, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="form-group" style="color:red">
+           Hình Ảnh
             <div class="col-md-10">
                 <img id="output" class="img-thumbnail" alt="anh" width="180" height="200" src="@Url.Content(imagePath)" />
                 <p>
@@ -61,16 +61,16 @@
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.DateOfImport, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="form-group" style="color:red">
+           Ngày Nhập
             <div class="col-md-10">
                 @Html.EditorFor(model => model.DateOfImport, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.DateOfImport, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.ProDescription, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="form-group" style="color:red">
+           Mô Tả
             <div class="col-md-10">
                 @Html.EditorFor(model => model.ProDescription, new { htmlAttributes = new { @class = "form-control", @type = "text" } })
                 @Html.ValidationMessageFor(model => model.ProDescription, "", new { @class = "text-danger" })
