--- a/webBanHang/webBanHang/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/webBanHang/webBanHang/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -70,7 +70,7 @@
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Select Components:</h6>
-                       
+
                         @Html.ActionLink("Khách hàng", "Index", "Customers", null, new { area = "Admin", @class = "collapse-item" })
                     </div>
                 </div>
@@ -122,6 +122,25 @@
 
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
+            <div class="sidebar-heading">
+                Sản Phẩm Bán chạy
+            </div>
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseBC"
+                   aria-expanded="true" aria-controls="collapsePagess">
+                    <i class="fas fa-fw fa-folder"></i>
+                    <span>Sản Phẩm Bán Chạy</span>
+                </a>
+                <div id="collapseBC" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <h6 class="collapse-header">Select components:</h6>
+                        @Html.ActionLink("Sản Phẩm Bán Chạy", "Index", "SanPhamBanChay", null, new { area = "Admin", @class = "collapse-item" })
+                    </div>
+                </div>
+            </li>
+
+            <!-- Divider -->
+            <hr class="sidebar-divider d-none d-md-block">
 
             <!-- Sidebar Toggler (Sidebar) -->
             <div class="text-center d-none d-md-inline">
@@ -130,10 +149,10 @@
 
             <!-- Sidebar Message -->
             @*<div class="sidebar-card d-none d-lg-flex">
-                <img class="sidebar-card-illustration mb-2" src="/Asset/Admin/img/undraw_rocket.svg" alt="...">
-                <p class="text-center mb-2"><strong>SB Admin Pro</strong> is packed with premium features, components, and more!</p>
-                <a class="btn btn-success btn-sm" href="https://startbootstrap.com/theme/sb-admin-pro">Upgrade to Pro!</a>
-            </div>*@
+            <img class="sidebar-card-illustration mb-2" src="/Asset/Admin/img/undraw_rocket.svg" alt="...">
+            <p class="text-center mb-2"><strong>SB Admin Pro</strong> is packed with premium features, components, and more!</p>
+            <a class="btn btn-success btn-sm" href="https://startbootstrap.com/theme/sb-admin-pro">Upgrade to Pro!</a>
+        </div>*@
 
         </ul>
         <!-- End of Sidebar -->
